src/snapshots/claptrap__tests__command__allow_missing_positional_with_default.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_arg2='other'
claptrap_arg1='something'
