src/snapshots/claptrap__tests__command__arg.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_7b429414'
[1m[4mUsage:[0m [1mmyprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-d[0m <debug>             turns on debugging mode
  [1m-c[0m, [1m--config[0m <CONFIG>  Optionally sets a config file to use
  [1m-h[0m, [1m--help[0m             Print help
EOF_7b429414
exit 0
