src/snapshots/claptrap__tests__command__arg_required_else_help.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_ee8716d0'
[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_ee8716d0
exit 2
