src/snapshots/claptrap__tests__command__color-1.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_c5a6fdd8'
Usage: myprog [OPTIONS]

Options:
      --config <cfg>  
  -h, --help          Print help
EOF_c5a6fdd8
exit 0
