src/snapshots/claptrap__tests__command__disable_colored_help-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_a65913b8'
[1m[31merror:[0m unexpected argument '[33m--confg[0m' found

  [32mtip:[0m a similar argument exists: '[32m--config[0m'

[1m[4mUsage:[0m [1mmyprog[0m [1m--config[0m <cfg>

For more information, try '[1m--help[0m'.
EOF_a65913b8
exit 1
