src/snapshots/claptrap__tests__command__disable_colored_help.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_74924462'
[1m[4mUsage:[0m [1mmyprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--config[0m <cfg>  
  [1m-h[0m, [1m--help[0m          Print help
EOF_74924462
exit 0
